<resources>
    <string name="app_name">RoR</string>
    <string name="registerConnStr">http://192.168.0.127:8081/register.php</string>
    <string name="loginConnStr">http://192.168.0.127:8081/login.php</string>
    <!--IndexActivity-->
    <string name="home_b">浏览</string>
    <string name="read_b">阅读</string>
    <string name="search_b">搜索</string>
    <string name="recite_b">背诵</string>
    <string name="mine_b">我的</string>
    <string name="finish">完成</string>
    <string name="RoR">RoR</string>
    <string name="refresh_books">更新目录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="find_qidian">起点中文网</string>
    <string name="find_qidian_ns">起点女生网</string>
    <!--read_menu-->
    <string name="menu_bookcase_search">搜索</string>
    <string name="m_sync">同步</string>
    <string name="read_edit">编辑</string>
    <string name="add_local">添加本地书籍</string>
    <string name="menu_group_man">分组管理</string>
    <string name="menu_change_group">分组切换</string>
    <string name="menu_bookcase_download_all">一键缓存</string>
    <!--AddLocalBook-->
    <string name="select_all">全选</string>
    <string name="file_add_shelf">加入书架</string>
    <string name="delete">删除</string>
    <string name="file_add_succeed">成功添加%1$d本书</string>
    <string name="file_path">存储卡:%1$s</string>
    <string name="loading_tip">正在加载...</string>
    <string name="file_sub_count">%1$d 项</string>
    <string name="file_add_shelves">加入书架(%1$d)</string>
    <!--SharedPre-->
    <string name="curBookGroupId">curBookGroupId</string>
    <string name="lanzousKeyStart">lanzousKeyStart</string>
    <string name="threadNum">threadNum</string>
    <string name="downloadLink">downloadLink</string>
    <string name="searchSource">searchSource</string>
    <string name="qdCookie">qdCookie</string>
    <string name="lastRead">lastRead</string>
    <string name="isNightFS">isNightFS</string>
    <string name="menu_add_bookmark">添加书签</string>
    <string name="menu_copy_content">拷贝内容</string>
    <string name="synTime">synTime</string>

    <!--bookcase-->
    <string name="stop_download_tip">停止</string>
    <string name="menu_book_Top">移至顶部</string>
    <string name="menu_book_detail">书籍详情</string>
    <string name="menu_book_download">缓存书籍</string>
    <string name="menu_book_cache">导出缓存</string>
    <string name="menu_book_delete">删除/移除书籍</string>
    <string name="menu_read_book_add">加入精读区</string>
    <string name="menu_read_book_Top">移至首位</string>
    <string name="menu_read_book_delete">从精读区移除书籍</string>
    <string-array name="group_man">
        <item>添加分组</item>
        <item>重命名分组</item>
        <item>删除分组</item>
    </string-array>
    <string name="isReadDownloadAllTip">isReadDownloadAllTip</string>
    <string name="all_cathe_tip">是否要一键缓存？"</string>


    <!--source-->
    <string name="rule_book_type">分类规则</string>
    <string name="source_title_num">书源:%1$s  共%2$d个源</string>
    <!--book-->
    <string name="newest_chapter">最新章节:%1$s</string>
    <string name="novel_girl">女生小说</string>

    <!--search-->
    <string name="all">全部</string>
    <string name="fuzzy_search">模糊搜索</string>
    <string name="precise_search">精确搜索</string>
    <string name="hot_search">热搜</string>
    <string name="disable_source">禁用书源</string>
    <string name="book_source_man">书源管理</string>
    <string name="all_source">所有书源</string>
    <string name="local_source">内置书源</string>
    <string name="enable_use">启用</string>
    <string name="ban">禁用</string>
    <string name="check">校验</string>
    <string name="enable_selected">启用所选</string>
    <string name="disable_selected">禁用所选</string>
    <string name="check_selected">校验所选</string>
    <string name="cancle_select_all">取消全选</string>
    <string name="common_search">搜索</string>


    <!--group-->
    <string name="curBookGroupName">curBookGroupName</string>

    <!--bookDetail-->
    <string name="menu_share">分享书籍</string>
    <string name="menu_group_setting">设置分组</string>
    <string name="menu_change_source">更换书源</string>
    <string name="menu_reload">重新加载</string>
    <string name="menu_is_update">启用更新</string>
    <string name="menu_open_link">打开链接</string>
    <string name="menu_manage_markE">管理标注</string>
    <string name="share">分享</string>

    <!--FileSystem-->
    <string-array name="my_file">
        <item>/RoRReader/</item>
        <item>/RoRReader/share</item>
        <item>/RoRReader/log</item>
        <item>/RoRReader/bg</item>
        <item>/RoRReader/tem</item>
        <item>/RoRReader/backup</item>
        <item>/RoRReader/noveltxt</item>
        <item>/RoRReader/font</item>
        <item>/RoRReader/apk</item>
    </string-array>

    <!--read-->
    <string name="back_color">背景颜色：</string>
    <string name="font_color">字体颜色：</string>
    <string name="share_layout">共用布局</string>
    <string name="back_picture">背景图片</string>
    <string name="save">保存</string>
    <string name="import_">导入</string>
    <string name="export">导出</string>
    <string name="reset_layout">重置布局</string>
    <string name="turn_page_speed">翻页速度：%s %%</string>
    <string name="exit_auto_page">退出自动翻页</string>
    <string name="brightness">亮度</string>
    <string name="follow_sys">跟随系统</string>
    <string name="blue_filter">蓝光过滤</string>
    <string name="open_protect_eye">开启护眼</string>
    <string name="content_replace">内容替换</string>
    <string name="summary">概要</string>
    <string name="summary_tip">说明信息</string>
    <string name="replace_rule_old">替换前</string>
    <string name="replace_rule_old_tip">要替换的内容</string>
    <string name="replace_use_regex">使用正则</string>
    <string name="replace_rule_new">替换为</string>
    <string name="replace_rule_new_tip">替换后的内容</string>
    <string name="use_to_source">应用于书源</string>
    <string name="use_to_source_tip">默认将应用于所有书源</string>
    <string name="select">选择</string>
    <string name="use_to_book">应用于书籍</string>
    <string name="use_to_book_tip">默认将应用于所有书籍</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="sys_file_provider">com.example.myreadproject8.fileprovider</string>
    <string name="local_book">本地书籍</string>
    <string name="tip">提示</string>
    <string name="download_book">缓存书籍</string>
    <string name="download_no_add_tips">缓存书籍需要先加入书架，您确定要添加本书到书架吗？</string>
    <string-array name="page_mode">
        <item>覆盖</item>
        <item>仿真</item>
        <item>滑动</item>
        <item>上下</item>
        <item>滚动</item>
        <item>无动画</item>
    </string-array>
    <string name="indent_0">无缩进</string>
    <string name="indent_1">一字符缩进</string>
    <string name="indent_2">二字符缩进</string>
    <string name="indent_3">三字符缩进</string>
    <string name="indent_4">四字符缩进</string>
    <string-array name="indent">
        <item>@string/indent_0</item>
        <item>@string/indent_1</item>
        <item>@string/indent_2</item>
        <item>@string/indent_3</item>
        <item>@string/indent_4</item>
    </string-array>
    <string-array name="download">
        <item>下载后面五十章</item>
        <item>下载前后五十章</item>
        <item>下载后面全部章</item>
        <item>下载本书所有章</item>
    </string-array>
    <string-array name="search_way">
        <item>使用[百度]</item>
        <item>使用[谷歌]</item>
        <item>使用[有道词典]</item>
    </string-array>
    <string name="download_already_all_tips">所选章节已经全部缓存！</string>
    <string name="traditional_to_simplified_tip">已设置文本为繁转简，不需要时请及时取消。如果所阅读文本并非繁体字，强制繁转简后可能出现一些异常文字。</string>
    <string name="tight_com_tip">已切换为等距排版，该排版下所有段落字符间等距，将会允许标点符号出现在行首，允许拆分标点组合等。</string>
    <string name="share_layout_tip">开启共用布局将会使所有布局共用当前排版、字体方案，修改排版(背景颜色、字体颜色除外)时会同时应用于所有布局，确定要开启共用布局吗？</string>

    <!--bookSource-->
    <string name="read_miaobi">妙笔阁</string>
    <string name="read_zuopin">作品集·实体</string>
    <string name="read_cangshu99">99藏书·实体</string>

    <!--setting-->
    <string name="read_setting">阅读设置</string>
    <string name="volume_turn_page">音量键翻页</string>
    <string name="reset_screen_time">息屏时间</string>
    <string name="long_press">长按选择文字</string>
    <string name="no_menu_ch_title">菜单隐藏章节标题/链接</string>
    <string name="bookcase_setting">书架设置</string>
    <string name="book_sort">书架排序</string>
    <string name="manual_sort">手动排序</string>
    <string name="search_setting">搜索设置</string>
    <string name="thread_num">搜索线程数</string>
    <string name="cur_thread_num">当前线程数：%1$d</string>
    <string name="cathe_setting">缓存设置</string>
    <string name="cathe_gap">章节缓存间隔</string>
    <string name="clear_cathe">清除缓存</string>
    <string name="download_all_tip">选择一键缓存的书籍</string>
    <string name="download_all">一键缓存</string>
    <string name="time_sort">按时间排序</string>
    <string name="book_name_sort">按书名排序</string>
    <string-array name="book_sort">
        <item>@string/manual_sort</item>
        <item>@string/time_sort</item>
        <item>@string/book_name_sort</item>
    </string-array>
    <string-array name="reset_screen_time">
        <item>常亮</item>
        <item>1分钟</item>
        <item>3分钟</item>
        <item>5分钟</item>
    </string-array>
    <string-array name="cathe_chapter_gap">
        <item>50ms</item>
        <item>100ms</item>
        <item>150ms</item>
        <item>200ms</item>
        <item>250ms</item>
    </string-array>


    <!--replaceRule-->
    <string name="top">置顶</string>
    <string name="replace_rule">内容替换规则</string>
    <string name="add_rule">新建规则</string>
    <string name="export_all">导出所有</string>
    <string name="reverse_rule">反转规则可用性</string>
    <string name="delete_ban_rule">删除禁用规则</string>
    <string name="import_rule">导入规则</string>
    <string-array name="import_rule">
        <item>从剪切板导入</item>
        <item>从文件导入</item>
        <item>从网络导入</item>
    </string-array>

    <!--mine-->
    <string name="menu_bookcase_backup">备份/恢复</string>
    <string name="menu_settings">应用设置</string>
    <string name="menu_backup_backup">备份</string>
    <string name="menu_backup_restore">恢复</string>

    <!--user-->
    <string name="text_login">登录</string>
    <string name="et_account_tip">请输入用户名</string>
    <string name="tv_register">新用户注册</string>
    <string name="et_password_tip">请输入密码</string>
    <string name="et_rp_password_tip">请再次输入密码</string>
    <string name="text_register">注册</string>
    <string name="text_agreement_tip">我已阅读并同意《</string>
    <string name="link_agreement">
        <a href="https://shimo.im/docs/K9KDjtKJqpGT8YKg">用户服务协议</a>
    </string>

    <!--recite-->
    <string name="content_recite">添加背诵</string>
    <string name="recite_t">标题</string>
    <string name="recite_c">背诵内容</string>
    <string name="recite_n">背诵次数</string>
    <string name="need_recite_c">要背诵的内容</string>
    <string-array name="recite_nums">
        <item>1次</item>
        <item>2次</item>
        <item>3次</item>
        <item>4次</item>
        <item>5次</item>
        <item>6次</item>
        <item>7次</item>
    </string-array>
    <string name="menu_recite_d">删除该项</string>
    <string name="menu_recite_check">背诵详情</string>
    <string name="menu_recite_top">置顶</string>
    <string name="menu_add_recite">增加背诵区</string>

</resources>