<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_finish"
        android:title="@string/finish"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/m_sync"
        android:icon="@drawable/ic_refresh"
        android:title="@string/m_sync"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_add_recite"
        android:icon="@drawable/ic_add_default"
        android:title="@string/menu_change_source"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:visible="false"
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh_books"
        app:showAsAction="never"/>

    <group android:id="@+id/bookcase_menu">

        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_default"
            android:title="@string/menu_bookcase_search"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_add_local"
            android:icon="@drawable/ic_add_default"
            android:title="@string/add_local"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_group_man"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_group_man"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_change_group"
            android:icon="@drawable/ic_change_group"
            android:title="@string/menu_change_group"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_edit_default"
            android:title="@string/read_edit"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_download_all"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_bookcase_download_all"
            app:showAsAction="never"
            android:visible="true"/>

    </group>
</menu>
